--- a/rtl.css
+++ b/rtl.css
@@ -100,7 +100,7 @@ input[type="checkbox"] {
 	right: auto;
 }
 
-.twentyseventeen-panel .recent-posts .entry-header .edit-link {
+.iwelcome-panel .recent-posts .entry-header .edit-link {
 	margin-left: 0;
 	margin-right: 1em;
 }
@@ -264,7 +264,7 @@ input[type="checkbox"] {
 
 /* Customizer styles */
 
-.twentyseventeen-customizer.twentyseventeen-front-page .twentyseventeen-panel .twentyseventeen-panel-title {
+.iwelcome-customizer.iwelcome-front-page .iwelcome-panel .iwelcome-panel-title {
 	left: 3.2em;
 	right: auto;
 }
@@ -449,7 +449,7 @@ input[type="checkbox"] {
 	/* blog index and archive */
 
 	.blog:not(.has-sidebar) .entry-content blockquote.alignleft,
-	.twentyseventeen-front-page.page-two-column .entry-content blockquote.alignleft,
+	.iwelcome-front-page.page-two-column .entry-content blockquote.alignleft,
 	.archive:not(.has-sidebar) .entry-content blockquote.alignleft,
 	.page-two-column .entry-content blockquote.alignleft {
 		margin-left: 0;
@@ -457,7 +457,7 @@ input[type="checkbox"] {
 	}
 
 	.blog:not(.has-sidebar) .entry-content blockquote.alignright,
-	.twentyseventeen-front-page.page-two-column #primary .entry-content blockquote.alignright,
+	.iwelcome-front-page.page-two-column #primary .entry-content blockquote.alignright,
 	.archive:not(.has-sidebar) .entry-content blockquote.alignright,
 	.page-two-column #primary .entry-content blockquote.alignright {
 		margin-right: -72.5%;
@@ -553,7 +553,7 @@ input[type="checkbox"] {
 	.blog:not(.has-sidebar) .entry-content blockquote.alignleft,
 	.archive:not(.has-sidebar) .entry-content blockquote.alignleft,
 	.page-two-column .entry-content blockquote.alignleft,
-	.twentyseventeen-front-page .entry-content blockquote.alignleft {
+	.iwelcome-front-page .entry-content blockquote.alignleft {
 		margin-left: -20%;
 	}
 }
