--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ Version: 1.0
 /*--------------------------------------------------------------
         Globals
 --------------------------------------------------------------*/
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,600|Roboto');
 #front-page {
   display: none;
 }
@@ -46,7 +47,7 @@ a:hover {
     color:black;
 }
 h1,h2,h3,h4,h5,h6{
-    font-family: "TradeGothicW01-BoldCn20_675334",sans-serif;
+    font-family: 'Oswald', sans-serif;
     line-height: 1;
     font-weight: unset;
 }
@@ -74,6 +75,15 @@ ul,li{
     text-shadow: none;
     float: left;
     padding-left: 20px;
+}
+.masthead img{
+    float:right;
+    height:70px;
+    padding:10px;
+}
+.masthead h1::after{
+    font-family:"iwelcome";
+    content: " \61";
 }
 .site-content{
     width:100%;
@@ -168,7 +178,7 @@ display: block;
 }
 /* Grid */
 .grid-cell-container a{
-    font-family: "TradeGothicW01-BoldCn20_675334",sans-serif;
+    font-family: 'Oswald', sans-serif;
     line-height: 1;
     overflow: hidden;
     width: 100%;
@@ -192,7 +202,6 @@ display: block;
 margin: 0px;
 
 }
-
 .img-container:hover {
     overflow: hidden;
 }
@@ -281,11 +290,18 @@ margin: 0px;
         /* Firefox */
         column-count: 1;
     }
+    .post-title-link img {
+        -webkit-filter: none!important;
+        /* Ch 23+, Saf 6.0+, BB 10.0+ */
+        filter: none!important;
+        /* FF 35+ */
+        width: 100%;
+        opacity:1 !important;
+}
 }
 /*---   Section 2, Homepage ---*/
 .section-2{
-    height:1800px;
-    padding-top:500px;
+    padding: 400px 0px;
     background:url('http://aito.ca/iwelcome/wp-content/uploads/2017/07/iwelcomeamnesty2.png');
     background-attachment: fixed;
     background-position: center;
@@ -314,6 +330,7 @@ margin: 0px;
     background-color:yellow;
     color:black;
     overflow: hidden;
+    padding-bottom:50px;
 }
 #section-container{
     max-width:80%;
@@ -461,7 +478,7 @@ margin: 0px;
   padding: 45px 40px 0px 0px;
   margin: 0px;
   position: relative;
-  font-family: "TradeGothicW01-BoldCn20_675334",sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 4vw;
   line-height: 1;
   color: #4a4a4a;
@@ -516,7 +533,9 @@ z-index: -1;
    Smaller Screen Media Query < 500px
 --------------------------------------------------------------*/
 @media (max-width: 1000px) {
-    
+    .masthead img{
+        height:45px;
+    }
     .float-left h2{
         font-size:90%;
     }
@@ -586,19 +605,37 @@ z-index: -1;
     body{
         font-size:15px;
     }
+    .masthead h1{
+        font-size: 125%;
+    }
+    .masthead img{
+        height:45px;
+    }
+    .section-2{
+        background:url('http://aito.ca/iwelcome/wp-content/uploads/2017/07/bg-2.jpg');
+        background-attachment:scroll;
+        background-position: top left;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding:100px 0px;
+        background-color:yellow;
+    }
+    .section-3{
+        background-color: rgba(0, 0, 0, 0.8);
+    }
     .single .site-wrapper {
     padding-top: 0px;
     }
     .masthead-single{
     position: relative;
         height:50px;
-}
-.masthead-single h1{
-    font-size:90%;
-}
-.masthead-single h1 i{
-    font-size:120%;
-}
+    }
+    .masthead-single h1{
+        font-size:90%;
+    }
+    .masthead-single h1 i{
+        font-size:120%;
+    }
 .masthead-single img{
     height:20px;
     width:auto;
